test/library/packages/OrderedMap/init/testInitGenericError2.good
$CHPL_HOME/modules/packages/OrderedMap.chpl:167: In initializer:
$CHPL_HOME/modules/packages/OrderedMap.chpl:171: warning: creating a orderedMap with value type C
$CHPL_HOME/modules/packages/OrderedMap.chpl:171: warning: which now means class type with generic management
$CHPL_HOME/modules/packages/OrderedMap.chpl:171: error: orderedMap value type cannot currently be generic
testInitGenericError2.chpl:9: Initializer instantiated as: init(type keyType = int(64), type valType = C, param parSafe = 0, comparator: DefaultComparator, param implType: mapImpl = mapImpl.treap)
